fixed and issue with floating main canvas. Now all divs align as it should be

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -46,7 +46,7 @@ header {
 #left-side-screen-hades {
     display: flex;
     align-items: center;
-    width: 33%;
+    width: 25%;
     float: left;
     justify-content: center;
     flex-direction: row;
@@ -58,7 +58,7 @@ header {
     align-content: center;
     align-items: center;
     flex-direction: row;
-    width: 33%;
+    width: 25%;
     float: right;
 }
 
@@ -67,6 +67,7 @@ canvas {
     flex-direction: row;
     justify-content: center;
     align-content: center;
-    width: 33%;
+    width: 50%;
     flex-wrap: wrap;
+    float: left;
 }
